Use correct z-index in bk-tooltip (#8718)

--- a/bokehjs/src/less/menu.less
+++ b/bokehjs/src/less/menu.less
@@ -9,7 +9,7 @@
   position: absolute;
   left: 0;
   width: 100%;
-  z-index: 100;
+  .bring-to-front();
 
   cursor: pointer;
   font-size: @font-size;
