--- a/bokehjs/src/less/mixins.less
+++ b/bokehjs/src/less/mixins.less
@@ -72,3 +72,7 @@
     opacity: 1;
   }
 }
+
+.bring-to-front() {
+  z-index: 100;
+}
